--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 tensorflow
+setuptools
 dvc
 pandas
 notebook
@@ -13,5 +14,9 @@ ensure==1.0.2
 joblib
 types-PyYAML
 scipy
+scikit-learn
+scikit-image
+opencv-python
+albumentations
 mlflow==1.26.1
 -e .
