GIT IGNORE UPDATED

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ dmypy.json
 #custom
 *.tar.gz
 .artifacts\data_ingestion
+artifacts/data_ingestion/cifar-100-python/meta
+artifacts/data_ingestion/cifar-100-python/test
+artifacts/data_ingestion/cifar-100-python/train
