--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,8 +1,15 @@
 artifacts_root: artifacts
 
 data_ingestion:
- root_dir: artifacts/data_ingestion
- source_URL: https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz
- local_data_file: artifacts/data_ingestion/data.tar.gz
- unzip_dir: artifacts/data_ingestion
+  root_dir: artifacts/data_ingestion
+  source_URL: https://www.cs.toronto.edu/~kriz/cifar-100-python.tar.gz
+  local_data_file: artifacts/data_ingestion/data.tar.gz
+  unzip_dir: artifacts/data_ingestion
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+
 
