--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,6 +6,12 @@ data_ingestion:
   local_data_file: artifacts/data_ingestion/data.tar.gz
   unzip_dir: artifacts/data_ingestion
 
+data_generation:
+  root_dir: artifacts/data_ingestion/cifar-100-python
+  train_file: artifacts/data_ingestion/cifar-100-python/train
+  test_file: artifacts/data_ingestion/cifar-100-python/test
+  meta_file: artifacts/data_ingestion/cifar-100-python/meta
+
 prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
