--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ artifacts/data_ingestion
 artifacts/data_ingestion/cifar-100-python/meta
 artifacts/data_ingestion/cifar-100-python/test
 artifacts/data_ingestion/cifar-100-python/train
+artifacts/transformed_data
