--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -23,5 +23,10 @@ generator:
   test_file: artifacts/data_ingestion/cifar-100-python/test
   meta_file: artifacts/data_ingestion/cifar-100-python/meta
 
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
 
 
