--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -36,5 +36,6 @@ prepare_callbacks:
 training:
   root_dir: artifacts/training
   trained_model_path: artifacts/training/model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
 
 
